Update error response model
